# aoe2

./: .gcloudignore  .gitignore
aoe2/: package.json
aoe2/prisma/: schema.prisma  seed.ts
frontend/: .gitignore  README.md  build_with_migrations.sh  fly.toml  package-lock.json  package.json  remix.config.js  tailwind.config.js
frontend/app/: models.ts  rateLimit.server.ts  root.tsx  tailwind.css
frontend/app/routes/: index.tsx
frontend/app/routes/api/: $matchId.ts
frontend/app/routes/player/: $playerId.tsx
frontend/prisma/: 2918752.json  schema.prisma  seed.json  seed.ts
frontend/prisma/migrations/20220205183525_optional_player_name/: migration.sql
frontend/prisma/migrations/20220206004103_optional_fields/: migration.sql
frontend/prisma/migrations/20220206005131_add_rating_type/: migration.sql
frontend/prisma/migrations/20220207180820_add_fields/: migration.sql
frontend/prisma/migrations/20220405192201_add_ratings_per_match/: migration.sql
frontend/prisma/migrations/20220405233208_add_synced_at_for_a_player/: migration.sql
frontend/prisma/migrations/20220405233340_add_rate_limit/: migration.sql
frontend/prisma/migrations/20220405234534_add_rate_limit/: migration.sql
frontend/prisma/migrations/20220406000415_make_ip_address_unique/: migration.sql
frontend/prisma/migrations/20221227183540_/: migration.sql
frontend/prisma/migrations/20221227185926_on_cascade/: migration.sql
process/: pyproject.toml  try.py
queue/: .gcloudignore  README.md  README.txt  deploy.sh  main.py  pyproject.toml  requirements.txt
(+4 files in other folders)
