[tool.poetry]
name = "aoe2"
version = "0.1.0"
description = ""
authors = ["boertel <ben@comediadesign.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mgz = { git = "https://github.com/happyleavesaoc/aoc-mgz", branch = "master" }
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
